--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,6 @@ main > .tagline {
     width: 100px; /* Adjust size as needed */
     height: 100px; /* Adjust size as needed */
     border-radius: 50%; /* Makes the image round */
-    border: 3px solid #fff; /* Optional: Adds a border */
+    border: 2px solid #000000; /* Optional: Adds a border */
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow */
 }
